Early out for empty text nodes, both reattach and visit.

The WhitespaceAttacher should just ignore empty text nodes as if they
weren't there in order to consider correct text node siblings for
figuring out which whitespace nodes need a LayoutText.

Bug: 894674
Change-Id: I27a96779678c972093dec6e5f2e19d6a40939065
Reviewed-on: https://chromium-review.googlesource.com/c/1288351
Commit-Queue: Rune Lillesveen <futhark@chromium.org>
Reviewed-by: Yoshifumi Inoue <yosin@chromium.org>
Cr-Commit-Position: refs/heads/master@{#600724}
Former-commit-id: 395e56f1f58492347fdad75595cd85463fd68ee3